Optimize map tile updates 100x
Pre-compute when loading map:
- projected projected paths for each geo feature
- projected bouds for each geo and general area
- discard small paths

--- a/editor/package.json
+++ b/editor/package.json
@@ -24,6 +24,7 @@
     "webpack-dev-server": "^1.15.0"
   },
   "dependencies": {
+    "area-polygon": "^1.0.1",
     "d3": "^4.2.2",
     "d3-geo": "^1.2.4",
     "point-in-polygon": "^1.0.1",
