--- a/editor/package.json
+++ b/editor/package.json
@@ -27,6 +27,7 @@
     "area-polygon": "^1.0.1",
     "d3": "^4.2.2",
     "d3-geo": "^1.2.4",
+    "dat-gui": "^0.5.0",
     "point-in-polygon": "^1.0.1",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
