--- a/editor/package.json
+++ b/editor/package.json
@@ -32,6 +32,7 @@
     "d3": "^4.2.2",
     "d3-dsv": "^1.0.1",
     "d3-geo": "^1.2.4",
+    "d3-scale": "^1.0.3",
     "dat-gui": "^0.5.0",
     "point-in-polygon": "^1.0.1",
     "raw-loader": "^0.5.1",
