--- a/editor/package.json
+++ b/editor/package.json
@@ -29,7 +29,8 @@
   },
   "dependencies": {
     "area-polygon": "^1.0.1",
-    "d3": "^4.2.2",
+    "d3-array": "^1.0.1",
+    "d3-collection": "^1.0.1",
     "d3-dsv": "^1.0.1",
     "d3-geo": "^1.2.4",
     "d3-scale": "^1.0.3",
