--- a/package.json
+++ b/package.json
@@ -35,6 +35,12 @@
     "d3-geo": "^1.2.4",
     "d3-scale": "^1.0.3",
     "dat-gui": "^0.5.0",
+    "eslint": "^3.4.0",
+    "eslint-config-airbnb": "^10.0.1",
+    "eslint-loader": "^1.5.0",
+    "eslint-plugin-import": "^1.14.0",
+    "eslint-plugin-jsx-a11y": "^2.2.1",
+    "eslint-plugin-react": "^6.2.0",
     "point-in-polygon": "^1.0.1",
     "raw-loader": "^0.5.1",
     "react": "^15.3.1",
