--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
     "css-loader": "^0.24.0",
+    "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
     "json-loader": "^0.5.4",
     "node-sass": "^3.8.0",
@@ -41,6 +42,7 @@
     "eslint-plugin-import": "^1.14.0",
     "eslint-plugin-jsx-a11y": "^2.2.1",
     "eslint-plugin-react": "^6.2.0",
+    "font-awesome": "^4.6.3",
     "point-in-polygon": "^1.0.1",
     "raw-loader": "^0.5.1",
     "react": "^15.3.1",
