Stroke convex hull around geo on hover

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-plugin-jsx-a11y": "^2.2.1",
     "eslint-plugin-react": "^6.2.0",
     "font-awesome": "^4.6.3",
+    "hull.js": "^0.2.10",
     "point-in-polygon": "^1.0.1",
     "raw-loader": "^0.5.1",
     "react": "^15.3.1",
