--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "d3-geo": "^1.2.4",
     "d3-scale": "^1.0.3",
     "dat-gui": "^0.5.0",
+    "density-clustering": "^1.3.0",
     "eslint": "^3.4.0",
     "eslint-config-airbnb": "^10.0.1",
     "eslint-loader": "^1.5.0",
