--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "font-awesome": "^4.6.3",
     "hull.js": "^0.2.10",
     "point-in-polygon": "^1.0.1",
+    "polygon-overlap": "^1.0.5",
     "raw-loader": "^0.5.1",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
