--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "area-polygon": "^1.0.1",
     "d3-array": "^1.0.1",
     "d3-collection": "^1.0.1",
+    "d3-color": "^1.0.1",
     "d3-dsv": "^1.0.1",
     "d3-geo": "^1.2.4",
     "d3-scale": "^1.0.3",
