--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "json-loader": "^0.5.4",
     "node-sass": "^3.8.0",
     "raw-loader": "^0.5.1",
+    "react-markdown": "^2.4.2",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.2",
