--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "density-clustering": "^1.3.0",
     "font-awesome": "^4.6.3",
     "hull.js": "^0.2.10",
+    "mobile-detect": "^1.3.5",
     "point-in-polygon": "^1.0.1",
     "polygon-overlap": "^1.0.5",
     "react": "^15.3.1",
